--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -33,7 +33,7 @@ stepPerDay <- tapply(data$steps, data$date,FUN = sum,  na.rm = TRUE  )
 
 qplot(stepPerDay, binwidth=500, xlab="total number of steps per day", fill=I("green"),col=I("green"))
 
-![](/Users/ashwini/GitHub/RepData_PeerAssessment1/instructions_fig/Histogram.png)
+![](./instructions_fig/Histogram.png)
 
 stepsPerDayMean <- mean(stepPerDay , na.rm = TRUE)
 
@@ -51,7 +51,7 @@ averages <- aggregate(x=list(steps=data$steps), by=list(interval=data$interval),
 
 ggplot(data=averages, aes(x=interval, y=steps)) + geom_line(color = "green") + ggtitle("Avg. No. of steps per day")
 
-![](/Users/ashwini/GitHub/RepData_PeerAssessment1/instructions_fig/seriesplot.png)
+
 
 ####2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 
